# config-validation

./: README.md  pyproject.toml  test.ipynb
config/: invalid_1.yaml  invalid_2.yaml  invalid_3.yaml  valid_1.yaml  valid_2.yaml
src/validate/: config.py  transforms.py  types.py
src/validate/train/: config.py
tests/: test_config.py
